<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"%1$s won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="app_tray_drawer_categories_title">SHOW APPS</string>
    <string name="app_tray_drawer_filters_title">FILTERS</string>
    <string name="app_tray_drawer_get_apps_title">GET APPS</string>
    <string name="app_tray_drawer_list_item_categories_alphabetical">Alphabetical</string>
    <string name="app_tray_drawer_list_item_categories_downloaded">Installed (%1$d)</string>
    <string name="app_tray_drawer_list_item_categories_most_used">Most used</string>
    <string name="app_tray_drawer_list_item_categories_own_order">Custom order</string>
    <string name="app_tray_drawer_list_item_search">Search apps</string>
    <string name="app_tray_drawer_list_item_uninstall">Uninstall</string>
    <string name="app_tray_drawer_search_hint">Search applications</string>
    <string name="app_tray_drawer_search_no_app_found">No match found</string>
    <string name="app_tray_options_menu_manage_apps_item_txt">Manage apps</string>
    <string name="app_tray_options_menu_sort_apps_item_txt">Sort apps</string>
    <string name="app_tray_pagination_title_downloaded">Installed</string>
    <string name="app_tray_pagination_title_most_used">Most used (%1$d)</string>
    <string name="desktop_add_dialog_apps_description">Add your favorite applications to the Home screen for easy access</string>
    <string name="desktop_add_dialog_shortcuts_description">"Add shortcuts to often used functions – for example a friend's phone number or a website"</string>
    <string name="desktop_add_dialog_widgets_description">Widgets let you quickly view information from apps</string>
    <string name="dialog_enable_location_service_body">To get recommendations based on your location you must turn on Location services</string>
    <string name="dialog_enable_location_service_title">Location services</string>
    <string name="dialog_enable_permission_title">%1$s permission</string>
    <string name="dialog_location_permission_description">To base recommendations on your location</string>
    <string name="google_play_button_label">"Search for '%1$s' on Google Play™"</string>
    <string name="gui_apply_txt">Apply</string>
    <string name="gui_cancel_txt">Cancel</string>
    <string name="gui_continue_txt">Continue?</string>
    <string name="gui_delete_txt">Delete</string>
    <string name="gui_done_txt">Done</string>
    <string name="gui_next_txt">NEXT</string>
    <string name="gui_ok_txt">OK</string>
    <string name="home_accessibility_Drop_to_create_folder">Drop to create folder</string>
    <string name="home_accessibility_Drop_to_delete">Drop to delete</string>
    <string name="home_accessibility_added_to_home_screen">Added to home screen</string>
    <string name="home_accessibility_app_info_icon">Tap to show app info</string>
    <string name="home_accessibility_app_search_clear_button">Clear query</string>
    <string name="home_accessibility_app_search_locate">Locate</string>
    <string name="home_accessibility_apptray_button">Applications</string>
    <string name="home_accessibility_apptray_pane_switched">Application screen %1$d of %2$d</string>
    <string name="home_accessibility_badgeitem_multiple_event_tapped">%1$s %2$s new events</string>
    <string name="home_accessibility_badgeitem_single_event_tapped">%1$s %2$s new event</string>
    <string name="home_accessibility_desktop_add_pane">Add new pane</string>
    <string name="home_accessibility_desktop_button">Home screen</string>
    <string name="home_accessibility_desktop_customize_fab_txt">Customize</string>
    <string name="home_accessibility_desktop_delete_pane">Delete pane</string>
    <string name="home_accessibility_desktop_new_pane_add_button_txt">Tap to add pane</string>
    <string name="home_search_personal_data_dialog_android_advertising_id">Android™ advertising ID</string>
    <string name="home_search_personal_data_dialog_location">Location</string>
    <string name="home_search_personal_data_dialog_shared_with_advertising_partners">Shared with advertising partners:</string>
    <string name="home_search_personal_data_dialog_usage_info">Usage info (apps used, games played etc.)</string>
    <string name="home_settings_about_category">About</string>
    <string name="home_settings_advanced_category">Advanced</string>
    <string name="home_settings_allow_rotate_summary">Allow auto rotation on the home screen</string>
    <string name="home_settings_allow_rotate_title">Auto rotation</string>
    <string name="home_settings_auto_pack_desktop_items">Automatically place icons together</string>
    <string name="home_settings_auto_pack_desktop_items_summary">Place items tightly together automatically on the desktop</string>
    <string name="home_settings_effects_category">Effects</string>
    <string name="home_settings_home_mode">Home screen layout</string>
    <string name="home_settings_icon_category">Icons</string>
    <string name="home_settings_icon_pack_summary">Choose icon pack or theme to apply icons from</string>
    <string name="home_settings_icon_pack_title">Icon appearance</string>
    <string name="home_settings_icon_size_title">Icon size</string>
    <string name="home_settings_layout_category">Layout</string>
    <string name="home_settings_license_button_summary">Information on the Home license</string>
    <string name="home_settings_license_title">License</string>
    <string name="home_settings_page_transition_summary">Choose the type of transition when swiping between panes</string>
    <string name="home_settings_page_transition_title">Pane transition</string>
    <string name="home_settings_search_category">Search</string>
    <string name="home_settings_search_personalize_summary">Improve recommendations by sharing personal data with Sony</string>
    <string name="home_settings_search_personalize_title">Improve recommendations</string>
    <string name="home_settings_search_recommendations_summary">Get recommendations from Google Play™</string>
    <string name="home_settings_search_recommendations_title">App recommendations</string>
    <string name="home_settings_show_keyboard_when_entering_search_apps_summary">Show keyboard when entering Search apps</string>
    <string name="home_settings_show_keyboard_when_entering_search_apps_title">Keyboard in Search apps</string>
    <string name="home_settings_show_labels_in_stage_summary">Show folder and app names in the dock area at the bottom of the Home screen</string>
    <string name="home_settings_show_labels_in_stage_title">Show names in dock</string>
    <string name="home_settings_straight_to_desktop_summary">Add icons directly to Home screen by touching and holding an icon on the Application screen</string>
    <string name="home_settings_straight_to_desktop_title">Add icons to Home screen</string>
    <string name="home_settings_version_title">Home version</string>
    <string name="icon_size_small">small</string>
</resources>