<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="@dimen/search_personal_data_dialog_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/search_personal_data_dialog_item_height" android:text="@string/home_search_personal_data_dialog_usage_info" android:drawablePadding="@dimen/search_personal_data_dialog_item_icon_padding" android:drawableStart="@drawable/pd_usageinfo" style="@style/PersonalDataDialogItemTextStyle" />
        <TextView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/search_personal_data_dialog_item_height" android:text="@string/home_search_personal_data_dialog_location" android:drawablePadding="@dimen/search_personal_data_dialog_item_icon_padding" android:drawableStart="@drawable/pd_location" style="@style/PersonalDataDialogItemTextStyle" />
        <TextView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/search_personal_data_dialog_item_height" android:text="@string/home_search_personal_data_dialog_shared_with_advertising_partners" style="@style/PersonalDataDialogItemTextStyle" />
        <TextView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/search_personal_data_dialog_item_height" android:text="@string/home_search_personal_data_dialog_android_advertising_id" android:drawablePadding="@dimen/search_personal_data_dialog_item_icon_padding" android:drawableStart="@drawable/pd_androidad" style="@style/PersonalDataDialogItemTextStyle" />
        <TextView android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="@dimen/search_personal_data_dialog_item_height" android:text="@string/home_search_personal_data_dialog_location" android:drawablePadding="@dimen/search_personal_data_dialog_item_icon_padding" android:drawableStart="@drawable/pd_location" style="@style/PersonalDataDialogItemTextStyle" />
    </LinearLayout>
</ScrollView>